# bebshaniti

./: .env.example  .gitignore  README.md  bangladesh_retail_wholesale_production_supabase_vercel_architecture.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: admin-ci.yml  api-ci.yml  flutter-ci.yml  landing-ci.yml  platform-console-ci.yml  security-ci.yml  supabase-ci.yml
apps/api/: .env.example  .vercelignore  Dockerfile  index.py  pyproject.toml
apps/api/app/: __init__.py  main.py  schemas.py
apps/api/app/core/: config.py  errors.py  locking.py  logging.py  permissions.py  security.py  supabase.py  tenant.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/modules/audit/: router.py
apps/api/app/modules/auth/: router.py
apps/api/app/modules/branches/: __init__.py  router.py
apps/api/app/modules/customers/: __init__.py  router.py
apps/api/app/modules/due/: __init__.py  router.py
apps/api/app/modules/health/: router.py
apps/api/app/modules/inventory/: router.py
apps/api/app/modules/organizations/: router.py
apps/api/app/modules/product_imports/: router.py
apps/api/app/modules/product_master/: router.py
apps/api/app/modules/products/: import_service.py  router.py
apps/api/app/modules/reports/: router.py
apps/api/app/modules/sales/: router.py
apps/api/scripts/: check_db.py  smoke_readonly.py  smoke_storage.py  uat_release.py
apps/api/tests/: test_auth.py  test_config.py  test_db_session.py  test_health.py  test_import_service.py  test_locking.py  test_permissions.py  test_routes.py  test_tenant.py
apps/landing/: .env.example  eslint.config.mjs  next.config.ts  package.json
apps/platform_console/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package.json
apps/pos_flutter/: .env.example  pubspec.yaml
apps/web_admin/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package.json
docs/: API.md  ARCHITECTURE.md  DATABASE.md  OFFLINE_SYNC.md  PHASES.md  PRODUCTION_HARDENING.md  PRODUCTION_LAUNCH_CHECKLIST.md  SECURITY.md  SETUP.md  SUPABASE_SETUP.md  VERCEL_DEPLOYMENT.md
infra/scripts/: check-no-secrets.ps1
infra/vercel/: admin.project.example.json  landing.project.example.json
supabase/: config.toml
supabase/migrations/: 202607040001_extensions_types_functions.sql  202607040002_core_schema.sql  202607040003_transactions_ledgers.sql  (+10 more)
(+87 files in other folders)
