[project]
name = "bd-business-os-api"
version = "0.1.0"
description = "Production business API for Bangladesh Retail + Wholesale Business OS"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "openpyxl>=3.1,<4",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "supabase>=2.11,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Header"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.vercel]
entrypoint = "app.main:app"
